fix: Updated styles for hr line and manager to enhance responsiveness on mobile devices.

--- a/src/components/ComponentStyles/EmployeeBoxContainer.css
+++ b/src/components/ComponentStyles/EmployeeBoxContainer.css
@@ -73,4 +73,13 @@
       left: 15px;
       height: 100%;
     }
+
+    .employee-box-container hr.employee-custom-line {
+        border: none;
+        height: 1px;
+        background: none;
+        margin: 15px 0;
+        background-image: linear-gradient(to right, rgba(221, 220, 222, 1) 20%, transparent 20%);
+        background-size: 20px 1px;
+    }
 }
